# DB-Visualizer

./: README.md
backend/: .gitignore  README.md  __init__.py  database_schema.sql  flask_app.py  generic_conversation_agent.py  metadata.txt  pyproject.toml  requirements.txt
backend/agents/: __init__.py  graph_and_summary_agent.py
backend/agents/bigquery_agents/: bigquery_query_agent.py  bigquery_query_agent_single_table.py  bigquery_table_identification_agent.py
backend/agents/core_engine_agents/: dependency_resolver_agent.py  human_agent.py  insightful_question_agent.py
backend/auth/: auth_handler.py
backend/connectors/: bigquery_connector.py
backend/core_engine_agents/: conversation_summary_agent.py  supervisor_agent.py
backend/models/: openai_model.py
backend/prompts/bigquery/: bigquery_query_generation_example_prompt.txt  bigquery_query_generation_schema_prompt.txt  bigquery_query_generation_start_prompt.txt  bigquery_query_generation_system_prompt.txt  bigquery_table_identification_start_prompt.txt  bigquery_table_identification_system_prompt.txt
backend/prompts/core_engine/: conversation_summary_system_prompt.txt  dependency_resolver_system_prompt.txt  human_agent_system_prompt.txt  related_questions_system_prompt.txt  supervisor_example_prompt.txt  supervisor_start_prompt.txt  supervisor_system_prompt.txt
backend/utils/: chat_history_handler.py  entity_resolver.py  flask_api_validations.py  helper_functions.py  input_analyzer.py  logger_config.py  title_generator.py
backend/workflows/: __init__.py  core_engine_workflow_graph.py
(+37 files in other folders)
