[project]
name = "bristlecone-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "flask (==3.0.3)",
    "flask-cors (==4.0.0)",
    "langchain (==0.1.13)",
    "langchain-core (==0.1.33)",
    "langchain-openai (==0.1.1)",
    "lxml-html-clean (==0.1.1)",
    "python-dotenv (==1.0.1)",
    "tiktoken (==0.7.0)",
    "google-cloud-bigquery (==3.17.2)",
    "flask-oauthlib (>=0.9.6,<0.10.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

packages = [{include = "Backend"}]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
